<resources>
    <string name="app_name">GoodFridayJourneyApp0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Good Friday App</string>
    <string name="nav_header_subtitle">prototype version 0.1</string>
    <string name="nav_header_desc">Good Friday App Navigation</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="menu_home">Home - Start here...</string>
    <string name="menu_gallery">Gallery - View/Pick Events</string>
    <string name="menu_slideshow">Go - Were you there?</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Settings</string>

    <string name="start_this_devotion">Start this Devotion</string>

    <string-array name="languages">
        "English",
        "Swahili",
        "Kreyol Ayisien"
    </string-array>

    <string name="scripture1"><![CDATA[<strong>Matthew 26</strong><br/>
        <sup><font size="50%">19</font></sup>And the disciples did as Jesus had directed them, and they prepared the Passover.<br/>
        <sup><font color="6dp">20</font></sup>When it was evening, he reclined at table with the twelve.
        ___<video>vid_20200113_204642156.mp4</video>___"]]></string>

    <string name="prayer1">Jesus, \n\t
        with your Father and Holy Spirit \n\t\t
        You presided over all creation,\n\t\t
        You buried all the earth with water \n\t\t\t
        in your righteous judgement, and \n\t\t
        You rain water on the earth \n\t\t\t
        to bless your people with life, \n\t
        yet you chose to be baptized \n\t\t
        by John in the Jordan river \n\t\t\t
        with the very water you created, \n\t
        you bring new human life through water, \n\t
        and even gushed water and blood \n\t\t
        from your side when you had died \n\t\t\t
        paying the full price \n\t\t\t\t
        for our redemption \n\t\t\t
        to wash us pure \n\t\t\t\t
        once for all. \n\t
        Please wash my feet \n\t\t
        by way of my confession and contrition\n\t\t\t
        so that I may keep being \n\t\t\t\t
        fully free again of that \n\t\t\t\t\t
        grimy sin accumulation\n\t\t\t\t
        that still sticks to me \n\t\t\t
        as we walk through this dusty world.\n\t\t
        And may I also be a foot washer\n\t\t\t
        in your kingdom \n\t\t\t\t
        here in our unique time on earth \n\t\t\t\t\t
        and in eternity\n\t\t\t\t\t\t
        where you live and reign for ever and ever.\n
        – Amen.</string>
</resources>
