<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_slideshow">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.garygoodellinnovator.goodfridayjourneyapp0.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.garygoodellinnovator.goodfridayjourneyapp0.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.garygoodellinnovator.goodfridayjourneyapp0.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.garygoodellinnovator.goodfridayjourneyapp0.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.garygoodellinnovator.goodfridayjourneyapp0.ui.settings.SettingsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.garygoodellinnovator.goodfridayjourneyapp0.ui.help.HelpFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_help" />
</navigation>